# fusedwind

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
docs/: about_fusedwind.rst  airfoil.rst  conf.py  developer_guide.rst  documentation.rst  index.rst  installation.rst  interfaces.rst  intro.rst  news.rst  plantcost.rst  plantcost_ex.rst  plantflow.rst  plantflow_ex.rst  runbatch.rst  runbatch_ex.rst  theory.rst  turbine.rst  turbine_aeroelastic.rst  turbine_aeroelastic_ex.rst  turbine_ex.rst  turbine_geometry.rst  turbine_structure.rst  turbine_structure_ex.rst  tutorial.rst  user_model.rst  wake_workflow.pptx
docs/_templates/: layout.html  layout_fork.html  localtoc.html  (+2 more)
fusedwind/: README.txt  openmdao_log.txt  setup.py
fusedwind_examples/: MANIFEST.in  README.txt  setup.cfg  setup.py
fusedwind_plugins/_deprecated_fused_wake/: setup.cfg  setup.py
fusedwind_plugins/_deprecated_fused_wake/src/fused_wake/: frandsen.py  noj.py  wake.py
fusedwind_plugins/_deprecated_fused_wake/src/fused_wake/sphinx_build/html/: genindex.html  index.html  objects.inv  pkgdocs.html  searchindex.js  srcdocs.html  usage.html
fusedwind_plugins/_deprecated_fused_wake/src/fused_wake/sphinx_build/html/_modules/fused_wake/: fused_wake.html  io.html  noj.html
fusedwind_plugins/_deprecated_fused_wake/src/fused_wake/sphinx_build/html/_sources/: index.txt  pkgdocs.txt  srcdocs.txt
fusedwind_plugins/_deprecated_fused_wake/src/fused_wake/test/: test_NOJ.py  test_lib.py
fusedwind_plugins/_deprecated_fused_wake/src/fused_wake/test/unittest_ref_files/NOJ/: HR_CT_270.txt
(+282 files in other folders)
