[metadata]
name = fused_wake
version = 0.1.1
summary = 
description-file = README.txt
keywords = openmdao
home-page = https://github.com/FUSED-Wind/FUSED-Wind/tree/develop/fusedwind_plugins/fused_wake
download-url = https://github.com/FUSED-Wind/FUSED-Wind/tree/develop/fusedwind_plugins/fused_wake
author = Pierre-Elouan Rethore, DTU Wind Energy
author-email = pire@dtu.dk
maintainer = Pierre-Elouan Rethore, DTU Wind Energy
maintainer-email = pire@dtu.dk
license = Research collaboration
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<3.0
requires-externals = fusedwind
project-url = 

[openmdao]
copyright = 
static_path = [ '_static' ]

